--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ prometheus_client==0.21.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
 scikit-learn==1.5.1
 scipy==1.13.1
 six==1.17.0
